[feature] add openapi package for complete crud
