# app/Models/Book.php
@@ -5,6 +5,18 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
 use App\Models\User;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *      description="Book model",
+ *      title="Book model",
+ *      required={"title", "author"},
+ *      @OA\Xml(
+ *          name="Book"
+ *      )
+ * )
+ */
 
 class Book extends Model {
     // use HasFactory;
